Fix build typing and update social icons

--- a/src/data/settings.json
+++ b/src/data/settings.json
@@ -2,7 +2,7 @@
   "communityName": "Tira para Arriba",
   "whatsappNumber": "54911XXXXXXXX",
   "whatsappDefaultMessage": "Hola, quiero sumarme a TPA. Me pasás info de próximas salidas?",
-  "instagramUrl": "https://instagram.com/tuinstagram",
+  "instagramUrl": "https://instagram.com/tiraparaarribaengrupo",
   "zonesText": "CABA y alrededores",
   "ageRuleText": "+35",
   "mentionText": "Salidas grupales mixtas +35"
